# webdmx

./: .barrelsby.json  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: checks.yml
bridge/: Cargo.toml  Dockerfile  README.md  deploy2pi4  start_test_env.sh
bridge/src/: main.rs
scripts/: update.sh
src/: index.ts
src/components/root/: root.component.ts
src/styles/: global.scss
src/utils/: usb.utils.ts
