[package]
name = "osc-bridge-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
websocket = "0.27"
serde = "1.0"
serde_json = "1.0"
rosc = "~0.10"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.29"
rand = "0.8.4"
