[package]
name = "dmx-osc-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1.46.1", features = ["full"] }
websocket = "0.27"
serde = "1.0"
serde_json = "1.0"
rosc = "~0.10"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.29"
rand = "0.8.4"
